Bug 619970 - Use the correct magic-value code in GetElement (r=waldo)